--- a/app/templates/dashboard/dashboard.html
+++ b/app/templates/dashboard/dashboard.html
@@ -3,10 +3,12 @@
 <head>  
     <title>Hospital</title>
     <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='styles.css')}}" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
+    <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='bootstrap.css')}}"/>
+    <script src="{{url_for('static', filename='jquery.js')}}"></script>
+    <script src="{{url_for('static', filename='popper.js')}}"></script>
+    <script src="{{url_for('static', filename='bootstrapjs.js')}}"></script>
+
     <script>
       $(document).ready(function() {
           var messages = "{{ get_flashed_messages() }}";
@@ -22,7 +24,6 @@
   <div class="navbar-crud">
     <a href="/">Home</a>
     <a href="/viewTrans">Record Trans</a>
-    <a href="/showPaymentList">Payment</a>
     <div class="dropdown-crud">
       <button class="dropbtn-crud">Pasien
         <i class="fa fa-caret-down"></i>
@@ -39,6 +40,7 @@
           <a href="/showDokterInTrans">Checking Dokter</a>
         </div>
     </div>
+    <a href="/showPaymentList">Payment</a>
     <div class="dropdown-crud">
       <button class="dropbtn-crud">Master
         <i class="fa fa-caret-down"></i>
